--- a/_posts/2020-03-04-随机事件与概率.md
+++ b/_posts/2020-03-04-随机事件与概率.md
@@ -39,11 +39,11 @@ tags: 概率论与数理统计
 
 事件$B$发生的条件下事件$A$发生的条件概率：
 $$
-P(A|B)=\frac{P(AB)}{P(B)}
+\\P(A|B)=\frac{P(AB)}{P(B)}
 $$
 事件$A$发生的条件下事件$B$发生的条件概率：
 $$
-P(B|A)=\frac{P(AB)}{P(A)}
+\\P(B|A)=\frac{P(AB)}{P(A)}
 $$
 
 ## 全概率公式
@@ -54,7 +54,7 @@ $$
 
 **定义：**设$B$为随机试验$T$中的任一事件，事件$A_1,...,A_n$构成一完备事件组，即$\cup A_i= \Omega$，$A_i{\cap}A_j=\oslash(i\neq j)$，且$P(A_i)>0,i=1,2,...,n$，则有
 $$
-P(B)=\sum_{i=1}^n{P(B|A_i)P(A_i)}
+\\P(B)=\sum_{i=1}^n{P(B|A_i)P(A_i)}
 $$
 上述公式称为全概率公式。
 
@@ -62,7 +62,7 @@ $$
 $$
 \begin{equation}
 \begin{aligned}
-P(B)&=P(BA_1)+P(BA_2)+...+P(BA_n)
+\\P(B)&=P(BA_1)+P(BA_2)+...+P(BA_n)
 \\& =\sum_{i=1}^nP(BA_i)
 \\& =\sum_{i=1}^nP(B|A_i)P(A_i)
 \end{aligned}
@@ -77,7 +77,7 @@ $$
 设$B$为一事件且$P(B)>0$，事件$A_1,...,A_n$构成一完备事件组，且$P(A_i)>0,i=1,2,...,n$，则有
 $$
 \begin{aligned}
-P(A_i|B)&=\frac{P(A_iB)}{P(B)}
+\\P(A_i|B)&=\frac{P(A_iB)}{P(B)}
 \\ &=\frac{P(B|A_i)P(A_i)}{\sum_{i=1}^nP(B|A_i)P(A_i)}
 \end{aligned}
 $$
