--- a/_posts/2020-03-04-随机事件与概率.md
+++ b/_posts/2020-03-04-随机事件与概率.md
@@ -1,6 +1,8 @@
 ---
 title: 随机事件与概率
-tags: 概率论与数理统计
+tags: 
+mathjax: true
+mathjax_autoNumber: true
 ---
 
 ## 事件之间的关系
@@ -56,15 +58,13 @@ $$
 $$
 \\P(B)=\sum_{i=1}^n{P(B|A_i)P(A_i)}
 $$
-
-
 上述公式称为全概率公式。
 
 **证明：**$B=B{\cap}{\Omega}=B{\cap}{(\cup_{i=1}^nA_i)}=\cup_i^n{(B\cap A_i)}$，由于$A_i{\cap}A_j=\oslash(i\neq j)$，所以$BA_i{\cap}BA_j=\oslash(i\neq j)$，即$BA_1,BA_2,...,BA_n$两两互不相容，根据概率的有限可加性与乘法公式得
 $$
 \begin{equation}
 \begin{aligned}
-\\P(B)&=P(BA_1)+P(BA_2)+...+P(BA_n)
+P(B)&=P(BA_1)+P(BA_2)+...+P(BA_n)
 \\& =\sum_{i=1}^nP(BA_i)
 \\& =\sum_{i=1}^nP(B|A_i)P(A_i)
 \end{aligned}
@@ -76,8 +76,6 @@ $$
 
 在全概率公式中，将事件$B$视为“结果”，事件$A_1,...,A_n$视为导致结果$B$发生的“原因”。有时我们还想要知道结果$B$发生到底主要由什么原因所引起，即需求$P(A_i|B)$，称之为**后验概率**。
 
-
-
 设$B$为一事件且$P(B)>0$，事件$A_1,...,A_n$构成一完备事件组，且$P(A_i)>0,i=1,2,...,n$，则有
 $$
 \begin{aligned}
@@ -85,6 +83,4 @@ $$
 \\ &=\frac{P(B|A_i)P(A_i)}{\sum_{i=1}^nP(B|A_i)P(A_i)}
 \end{aligned}
 $$
-
-
 上述公式称为贝叶斯公式。
