--- a/_posts/2020-03-04-随机事件与概率.md
+++ b/_posts/2020-03-04-随机事件与概率.md
@@ -7,7 +7,9 @@ mathjax_autoNumber: true
 
 
 
-When $$a \ne 0$$, there are two solutions to $$ax^2 + bx + c = 0$$ and they are a
+When $$a \ne 0$$, there are two solutions to $$ax^2 + bx + c = 0$$ and they are b
+
+
 $$
 x_1 = {-b + \sqrt{b^2-4ac} \over 2a}
 $$
