--- a/_posts/2020-03-04-随机事件与概率.md
+++ b/_posts/2020-03-04-随机事件与概率.md
@@ -7,13 +7,12 @@ mathjax_autoNumber: true
 
 
 
-When $$a \ne 0$$, there are two solutions to $$ax^2 + bx + c = 0$$ and they are f
+When $$a \ne 0$$, there are two solutions to $$ax^2 + bx + c = 0$$ and they are g
 
 
 $$
 x_1 = {-b + \sqrt{b^2-4ac} \over 2a}
 $$
-
 
 $$
 x_2 = {-b - \sqrt{b^2-4ac} \over 2a} \notag
