--- a/_posts/2020-03-04-随机事件与概率.md
+++ b/_posts/2020-03-04-随机事件与概率.md
@@ -83,13 +83,17 @@ $$
 
 在全概率公式中，将事件$B$视为“结果”，事件$A_1,...,A_n$视为导致结果$B$发生的“原因”。有时我们还想要知道结果$B$发生到底主要由什么原因所引起，即需求$P(A_i|B)$，称之为**后验概率**。
 
+在全概率公式中，将事件B视为“结果”，事件A视为导致结果B发生的“原因”。有时我们还想要知道结果B发生到底主要由什么原因所引起，即需求$P(A_i | B)$，称之为**后验概率**。
+
 设$B$为一事件且$P(B)>0$，事件$A_1,...,A_n$构成一完备事件组，且$P(A_i)>0,i=1,2,...,n$，则有
 
 $$
+\begin{equation}
 \begin{aligned}
 \\P(A_i|B)&=\frac{P(A_iB)}{P(B)}
-\\ &=\frac{P(B|A_i)P(A_i)}{\sum_{i=1}^nP(B|A_i)P(A_i)}
+\\&=\frac{P(B|A_i)P(A_i)}{\sum_{i=1}^nP(B|A_i)P(A_i)}
 \end{aligned}
+\end{equation}
 $$
 
 上述公式称为贝叶斯公式。
