--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -8,5 +8,8 @@ key: a1
 
 ## 随机变量
 
-设$\Omega$为某一随机试验的样本空间，如果对于每一个样本点$\omega$
+设$\Omega$为某一随机试验的样本空间，如果对于每一个样本点$\omega \in \Omega$，有一个实数$X(\omega)$与之对应，这样就定义了一个$\Omega$上的**实值函数$X=X(\omega)$**，称之为随机变量，简记为$X$。
+
+> 通俗地讲，随机变量就是一个随机的数，它是对任何的“随机的东西”做的量化。随机的对象可以是任何东西--明天的天气可以是晴、阴、雨，扔硬币的结果可以是正面或者反面，这里本身都没有数字。但是我们要借助概率论来研究它们，而概率论是数学的一部分，要用到数学语言，那么总是写“明天是晴天的概率”就很不方便，于是我们可以把晴、阴、雨贴上标签，叫做0、1、2，然后把明天的天气状况用一个字母X来表示，于是“明天下雨”就变成了“X=2”。这样，这个原本没有数字的随机结果就变成了一个可能的取值为0、1、2的随机数，这就是随机变量。
+> 链接：https://www.zhihu.com/question/307188808/answer/566226225
 
