--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -13,5 +13,26 @@ key: a1
 > 通俗地讲，随机变量就是一个随机的数，它是对任何的“随机的东西”做的量化。随机的对象可以是任何东西--明天的天气可以是晴、阴、雨，扔硬币的结果可以是正面或者反面，这里本身都没有数字。但是我们要借助概率论来研究它们，而概率论是数学的一部分，要用到数学语言，那么总是写“明天是晴天的概率”就很不方便，于是我们可以把晴、阴、雨贴上标签，叫做0、1、2，然后把明天的天气状况用一个字母X来表示，于是“明天下雨”就变成了“X=2”。这样，这个原本没有数字的随机结果就变成了一个可能的取值为0、1、2的随机数，这就是随机变量。
 > 链接：https://www.zhihu.com/question/307188808/answer/566226225
 
+ ## 离散型随机变量
 
+如果随机变量$X$的所有可能取值只有有限个或可列无穷多个，则称$X$为离散型随机变量。
 
+### 0-1分布
+
+若随机变量$X$的概率分布为
+
+| $X$ | 0   |1|
+| ---- | ---- |----|
+| $P$  | $1-p$ |$p$|
+
+其中$0<p<1$，则称$X$服从参数为$p$的$0-1$分布或两点分布，记为$X\sim B(1,p)$。
+
+### 二项分布
+
+若随机变量$X$的概率分布为
+$$
+P\{X=k\}=C_n^kp^k(1-p)^{n-k},\quad k=0,1,2,...,n.
+$$
+其中$n$是正整数，$0<p<1$，则称$X$服从参数为$n,p$的二项分布，记为$X\sim B(n,p)$。
+
+二项分布源于$n$重伯努利试验，若一次试验中事件$A$发生的概率为$p$，则$n$重伯努利试验中，事件$A$发生的次数$X$的概率分布为$P\{X=k\}=b(k;n,p)=C_n^kp^k(1-p)^{n-k}$。
