--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -44,3 +44,8 @@ $$
 P\{X=k\}=\frac{\lambda ^k}{k!}e^{-\lambda},\quad k=0,1,2,...
 $$
 其中$\lambda >0$，则称$X$服从参数为$\lambda$的泊松分布，记为$X\sim P(\lambda)$。
+
+可使用泊松分布近似二项分布
+$$
+C_n^kp^k(1-p)^{n-k}\approx \frac{\lambda ^k}{k!}e^{-\lambda},\quad \lambda =np
+$$
