--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -30,22 +30,33 @@ key: a1
 ### 二项分布
 
 若随机变量$X$的概率分布为
+
 $$
 P\{X=k\}=C_n^kp^k(1-p)^{n-k},\quad k=0,1,2,...,n.
 $$
+
 其中$n$是正整数，$0<p<1$，则称$X$服从参数为$n,p$的二项分布，记为$X\sim B(n,p)$。
 
-二项分布源于$n$重伯努利试验，若一次试验中事件$A$发生的概率为$p$，则$n$重伯努利试验中，事件$A$发生的次数$X$的概率分布为$P\{ X=k \}$$ =b(k;n,p)=C_n^kp^k(1-p)^{n-k}$。
+二项分布源于$n$重伯努利试验，若一次试验中事件$A$发生的概率为$p$，则$n$重伯努利试验中，事件$A$发生的次数$X$的概率分布为
+
+$$
+P\{ X=k \}=b(k;n,p)=C_n^kp^k(1-p)^{n-k}
+$$
+
 
 ### 泊松分布
 
 若随机变量$X$的概率分布为
+
 $$
 P\{X=k\}=\frac{\lambda ^k}{k!}e^{-\lambda},\quad k=0,1,2,...
 $$
+
 其中$\lambda >0$，则称$X$服从参数为$\lambda$的泊松分布，记为$X\sim P(\lambda)$。
 
 可使用泊松分布近似二项分布
+
 $$
 C_n^kp^k(1-p)^{n-k}\approx \frac{\lambda ^k}{k!}e^{-\lambda},\quad \lambda =np
 $$
+
