--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -60,3 +60,31 @@ $$
 C_n^kp^k(1-p)^{n-k}\approx \frac{\lambda ^k}{k!}e^{-\lambda},\quad \lambda =np
 $$
 
+## 分布函数及其性质
+
+### 分布函数的定义
+
+设$X$是一个随机变量，对任意$x\in (-\infty,+\infty)$，令
+$$
+F(x) = P\{X\leq x\}
+$$
+则称$F(x)$时随机变量$X$的分布函数。
+
+### 分布函数的性质
+
+- 单调性
+
+  $F(x)$是单调不减函数，即当$x_1<x_2$时，有$F(x_1)\leq F(x_2)$
+
+- 有界性
+
+  $0\leq F(x) \leq1 \quad (-\infty<x<+\infty)$，且$F(-\infty)=\lim\limits_{x\to -\infty} {F(x)}=0$，$F(+\infty)=\lim\limits_{x\to +\infty} {F(x)}=1$
+
+- 右连续性，即$F(x+0)=F(x)$，$\forall x\in R$
+
+
+
+## 连续型随机变量
+
+
+
