--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -65,9 +65,11 @@ $$
 ### 分布函数的定义
 
 设$X$是一个随机变量，对任意$x\in (-\infty,+\infty)$，令
+
 $$
 F(x) = P\{X\leq x\}
 $$
+
 则称$F(x)$时随机变量$X$的分布函数。
 
 ### 分布函数的性质
@@ -86,5 +88,23 @@ $$
 
 ## 连续型随机变量
 
+### 连续型随机变量及其概率密度函数
 
+设随机变量$X$的分布函数$F(x)$，如果存在**非负**函数$f(x)$，使得$\forall x \in (-\infty,+\infty)$，都有
 
+$$
+F(x)=\int_{-\infty}^{x}f(t)d_t
+$$
+
+则称$X$为连续型随机变量，$f(x)$为$X$的**概率密度函数**，简称概率密度或密度。
+
+相关性质：
+
+- $f(x)\geq 0,\quad -\infty<x<+\infty $
+- $\int_{-\infty}^{+\infty}f(x)=1$
+- 对于$\forall x_1\leq x_2$，$P\{x_1<X\leq x_2\}=\int_{x_1}^{x_2}f(x)d_x = F(x_2)-F(x_1)$
+- 若$f(x)$在$x$处连续，则$F^{'}(x)=f(x)$
+- 改变$f(x)$在个别处的值，不影响$F(x)$
+- $\forall x,P\{X=x\}=\int_x^xf(t)d_t=0$
+
+通常提到离散型随机变量的概率分布指的是其分布律，连续型随机变量的概率分布指的是其概率密度。
