--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -102,9 +102,9 @@ $$
 
 - $f(x)\geq 0,\quad -\infty<x<+\infty $
 - $\int_{-\infty}^{+\infty}f(x)=1$
-- 对于$\forall x_1\leq x_2$，$P\{x_1<X\leq x_2\}$$=\int_{x_1}^{x_2}f(x)d_x = F(x_2)-F(x_1)$
+- 对于$\forall x_1\leq x_2$，$P(x_1<X\leq x_2)$$=\int_{x_1}^{x_2}f(x)d_x = F(x_2)-F(x_1)$
 - 若$f(x)$在$x$处连续，则$F^{'}(x)=f(x)$
 - 改变$f(x)$在个别处的值，不影响$F(x)$
-- $$\forall x,P\{X=x\}=\int_x^xf(t)d_t=0$$
+- $\forall x,P(X=x)=\int_x^xf(t)d_t=0$
 
 通常提到离散型随机变量的概率分布指的是其分布律，连续型随机变量的概率分布指的是其概率密度。
