--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -109,3 +109,53 @@ $$
 
 通常提到离散型随机变量的概率分布指的是其分布律，连续型随机变量的概率分布指的是其概率密度。
 
+### 常见的连续型随机变量的分布
+
+#### 均匀分布
+
+随机变量$X$的概率密度为
+
+$$
+f(x) = \left\{ \begin{array}{ll}
+ \frac{1}{b-a}& {a\leq x \leq b }\\
+ 0 & \textrm{其他}
+\end{array} \right.
+$$
+
+则称$X$服从$[a，b]$上的均匀分布，记为$X \sim U[a,b]$.
+
+#### 指数分布
+
+随机变量$X$的概率密度为
+
+$$
+f(x) = \left\{ \begin{array}{}
+ \lambda e^{-\lambda x}& { x >0 }\\
+ 0 & {x\leq 0}
+\end{array} \right.
+$$
+
+则称$X$服均参数为$\lambda$的指数分布，记为$X \sim Exp(\lambda)$.
+
+#### 正态分布
+
+随机变量$X$的概率密度为
+
+$$
+f(x) = \frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}}, \quad -\infty<x<+\infty
+$$
+
+其中，$\mu、\sigma$是常数，且$\sigma >0$，则称$X$服均参数为$\mu,\sigma$的正态分布，记为$X \sim N(\mu,\sigma^2)$.
+
+特别地，当$\mu = 0$，$\sigma = 1$时，称$X$服从标准正态分布，其概率密度函数和分布函数分别用$\varphi(x)$和$\Phi(x)$表示。有$\varphi(0)=0.5$和$\Phi(-x)=1-\Phi(-x)$。
+
+设$X \sim N(\mu,\sigma^2)$，则
+
+$$
+\begin{aligned}
+Y&=kX+b \sim N(k\mu +b,k^2\sigma^2)
+\\Y&=\frac{x-\mu}{\sigma} \sim N(0,1)
+\end{aligned}
+$$
+
+由上式可知，正态随机变量的线性函数也服从正态分布，且非标准正态分布可以转化为标准正态分布计算概率密度的值。
