--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -159,3 +159,10 @@ Y&=kX+b \sim N(k\mu +b,k^2\sigma^2)
 $$
 
 由上式可知，正态随机变量的线性函数也服从正态分布，且非标准正态分布可以转化为标准正态分布计算概率密度的值。
+
+### 随机变量的函数的分布
+
+当$X$是连续型随机变量时，求$Y=g(X)$的概率密度的一般方法是：
+
+1. 先求$Y$的分布函数$F_y(y)$的表达式
+2. 再对$F_y(y)$求导，得$Y$得概率密度函数
