--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -145,7 +145,7 @@ $$
 f(x) = \frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^2}{2\sigma^2}}, \quad -\infty<x<+\infty
 $$
 
-其中，$\mu、\sigma$是常数，且$\sigma >0$，则称$X$服均参数为$\mu,\sigma$的正态分布，记为$X \sim N(\mu,\sigma^2)$.
+其中，$\mu$、$\sigma$是常数，且$\sigma >0$，则称$X$服均参数为$\mu,\sigma$的正态分布，记为$X \sim N(\mu,\sigma^2)$.
 
 特别地，当$\mu = 0$，$\sigma = 1$时，称$X$服从标准正态分布，其概率密度函数和分布函数分别用$\varphi(x)$和$\Phi(x)$表示。有$\varphi(0)=0.5$和$\Phi(-x)=1-\Phi(-x)$。
 
@@ -160,7 +160,7 @@ $$
 
 由上式可知，正态随机变量的线性函数也服从正态分布，且非标准正态分布可以转化为标准正态分布计算概率密度的值。
 
-### 随机变量的函数的分布
+## 随机变量的函数的分布
 
 当$X$是连续型随机变量时，求$Y=g(X)$的概率密度的一般方法是：
 
