--- a/_posts/2020-03-06-随机变量及其分布.md
+++ b/_posts/2020-03-06-随机变量及其分布.md
@@ -160,7 +160,7 @@ $$
 
 由上式可知，正态随机变量的线性函数也服从正态分布，且非标准正态分布可以转化为标准正态分布计算概率密度的值。
 
-## 随机变量的函数的分布
+### 随机变量的函数的分布
 
 当$X$是连续型随机变量时，求$Y=g(X)$的概率密度的一般方法是：
 
