--- a/_posts/2020-03-08-二维随机变量及其分布.md
+++ b/_posts/2020-03-08-二维随机变量及其分布.md
@@ -8,10 +8,12 @@ tags: 概率论与数理统计
 设$\Omega=\{\omega\}$是随机试验$T$的样本空间，$X$和$Y$是定义在$\Omega$上的两个随机变量，由$X$和$Y$构成的一个向量，$(X,Y)$叫做二维随机向量或二维随机变量。对于任意实数$x$和$y$，二元函数
 
 $$
+\begin{equation}
 \begin{aligned}
 F(x,y)&=P\{X\leq x \cap Y\leq y\} \\
       &=P\{X\leq x , Y\leq y\} 
 \end{aligned}
+\end{equation}
 $$
 
 称为二维随机变量$(X,Y)$的分布函数或联合分布函数。
