--- a/_posts/2020-03-08-二维随机变量及其分布.md
+++ b/_posts/2020-03-08-二维随机变量及其分布.md
@@ -16,7 +16,7 @@ F(x,y)&=P\{X\leq x \cap Y\leq y\} \\
 \end{equation}
 $$
 
-称为二维随机变量$(X,Y)$的分布函数或联合分布函数。
+称为二维随机变量$(X,Y)$的分布函数或联合分布函数。对于任意$n$个实数$x_1,x_2,...,x_n$的$n$元函数$F(x_1,x_2,...,x_n)=P\{X_1\leq x_1,X_2\leq x_2,...,X_n\leq x_n\}$叫做$n$维随机向量或$n$维随机变量。
 
 
 
