--- a/_posts/2020-03-08-二维随机变量及其分布.md
+++ b/_posts/2020-03-08-二维随机变量及其分布.md
@@ -27,3 +27,48 @@ F(x,y)=\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}f(u,v)d_u d_v
 $$
 
 则称$(X,Y)$为二维连续型随机变量，$f(x,y)$为概率密度函数或联合概率密度函数。
+
+## 边缘分布
+
+二维随机变量的分布函数$F(x,y)$既包含了$X$和$Y$的一切信息，又包含了$X$和$Y$之间关系的一切信息。我们称其分量$X$和$Y$的分布函数为二维随机变量$(X,Y)$关于$X$和$Y$的边缘分布函数，分别记作$F_X(x)$和$F_Y(y)$，边缘分布函数可以由$(X,Y)$的联合分布函数$F(x,y)$来确定
+
+$$
+\begin{equation}
+F_X(x)=\lim\limits_{y \to +\infty}F(x,y)=F(x,+\infty)
+\\F_Y(y)=\lim\limits_{x \to +\infty}F(x,y)=F(+\infty,y)
+\end{equation}
+$$
+
+则有
+
+$$
+\begin{equation}
+\begin{aligned}
+F_X(x)&=\lim\limits_{y \to +\infty}F(x,y)\\
+      &=\int_{-\infty}^{+\infty}\int_{-\infty}^{x}f(x,y)d_u d_v\\
+      &=\int_{-\infty}^{x}\int_{-\infty}^{+\infty}f(x,y)d_v d_u
+\end{aligned}
+\end{equation}
+$$
+
+由此可知，$X$，$Y$的边缘概率密度函数为
+
+$$
+f_X(x)=F_X^{'}(x)=\int_{-\infty}^{+\infty}f(x,y)d_y\\
+f_Y(y)=F_Y^{'}(y)=\int_{-\infty}^{+\infty}f(x,y)d_x
+$$
+
+## 条件分布
+
+给定$X=x$的条件下，随机变量$Y$的条件分布函数和条件概率密度为
+
+$$
+\begin{equation}
+\begin{aligned}
+F_{Y|X}(y|x)&=\int_{-\infty}^{y}\frac{f(x,v)}{f_X(x)}d_v\\
+f_{Y|X}(y|x)&=\frac{f(x,y)}{f_Y(y)}
+\end{aligned}
+\end{equation}
+$$
+
+证明略。
