--- a/_posts/2020-03-08-二维随机变量及其分布.md
+++ b/_posts/2020-03-08-二维随机变量及其分布.md
@@ -72,3 +72,22 @@ f_{Y|X}(y|x)&=\frac{f(x,y)}{f_Y(y)}
 $$
 
 证明略。
+
+### 相互独立性
+
+若随机变量$X$和$Y$相互独立，则有
+$$
+\begin{equation}
+\begin{aligned}
+F(x,y)&=F_X(x)F_Y(y)\\
+f(x,y)&=f_X(x)f_Y(y)
+\end{aligned}
+\end{equation}
+$$
+成立。
+
+进一步推广可得，随机变量$X$和$Y$相互独立的充分必要条件为
+$$
+f(x,y)=h(x)g(y)
+$$
+其中，$h(x)、g(y)$分别为$x、y$的函数。
