--- a/_posts/2020-03-08-二维随机变量及其分布.md
+++ b/_posts/2020-03-08-二维随机变量及其分布.md
@@ -73,7 +73,7 @@ $$
 
 证明略。
 
-### 相互独立性
+## 相互独立性
 
 若随机变量$X$和$Y$相互独立，则有
 
@@ -92,4 +92,4 @@ $$
 $$
 f(x,y)=h(x)g(y)
 $$
-其中，$h(x)、g(y)$分别为$x、y$的函数。
+.其中，$h(x)、g(y)$分别为$x、y$的函数。
