--- a/_posts/2020-03-08-二维随机变量及其分布.md
+++ b/_posts/2020-03-08-二维随机变量及其分布.md
@@ -23,7 +23,7 @@ $$
 如果存在非负函数$f(x,y)$，使得对于任意的实数$x$，$y$，均有
 
 $$
-F(x,y)=\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}f(u,v)d_u d_v
+F(x,y)=\int_{-\infty}^{y}\int_{-\infty}^{x}f(u,v)d_u d_v
 $$
 
 则称$(X,Y)$为二维连续型随机变量，$f(x,y)$为概率密度函数或联合概率密度函数。
