--- a/_posts/2020-03-14-朴素贝叶斯分类.md
+++ b/_posts/2020-03-14-朴素贝叶斯分类.md
@@ -4,6 +4,7 @@ tags: 统计学习方法
 ---
 
 > [贝叶斯公式参见](https://refantasy.cn/2020/03/04/随机事件与概率.html)
+> 
 > 本文内容和公式主要参考 李航《统计学习方法》
 
 ## 基本思想
@@ -39,9 +40,7 @@ P(Y=c_k|X = x)&=\frac{P((X=x)·(Y=c_k))}{P(X=x)}\\
 \end{equation}
 $$
 
-其中，$K$为样本类别数目。
-
-在式$(4)$中，$x$表示任意样本实例，$c_k$表示随机变量$Y$取到的值。$P(Y=c_k|X = x)$表示输入样本$x$，输出分类标签$Y=c_k$的概率。在进行分类时，取$y=f(x)=\mathop{\arg\max}_{c_k} P(Y=c_k|X=x)$即为我们所要预测的分类结果。
+其中，$K$为样本类别数目。在式$(4)$中，$x$表示任意样本实例，$c_k$表示随机变量$Y$取到的值。$P(Y=c_k\|X = x)$表示输入样本$x$，输出分类标签$Y=c_k$的概率。在进行分类时，取$y=f(x)=\mathop{\arg\max}_{c_k} P(Y=c_k\|X=x)$即为我们所要预测的分类结果。
 
 注意到，在式$(4)$中，对于$\forall c_k$，分母的值都是一样的。所以
 
@@ -53,7 +52,7 @@ $y$ 即为所要预测的$x$的分类结果。
 
 ## 参数估计
 
-在朴素贝叶斯法中，学习意味着估计$P(Y=c_k)$和$P(X = x|Y=c_k)$。先验概率$P(Y=c_k)$的极大似然估计为
+在朴素贝叶斯法中，学习意味着估计$P({Y=c_k})$和$P({X = x}\|{Y=c_k})$。先验概率$P(Y=c_k)$的极大似然估计为
 
 $$
 P(Y=c_k)=\frac{\sum_{i=1}^NI(y_i=c_k)}{N},k=1,2,...,K
@@ -61,7 +60,7 @@ $$
 
 其中，$N$为样本个数，$I$为指示函数。
 
-条件概率分布$P(X=x|Y=c_k)$有指数级参数，其估计实际是不可行的。事实上，假设$x^{(j)}$为随机变量$X$第$j$维的值，设其可取值有$S_j$个，$j=1,2,...,n$，$Y$的可取值有$K$个，那么条件概率分布的参数个数为$K\prod_{j=1}^nS_j$。朴素贝叶斯法对条件概率分布做了条件独立的假设，这也是“朴素”的得名由来。具体地，条件独立性假设是
+条件概率分布$P(X=x\|Y=c_k)$有指数级参数，其估计实际是不可行的。事实上，假设$x^{(j)}$为随机变量$X$第$j$维的值，设其可取值有$S_j$个，$j=1,2,...,n$，$Y$的可取值有$K$个，那么条件概率分布的参数个数为$K\prod_{j=1}^nS_j$。朴素贝叶斯法对条件概率分布做了条件独立的假设，这也是“朴素”的得名由来。具体地，条件独立性假设是
 
 $$
 \begin{equation}
@@ -84,27 +83,26 @@ $l=1,2,...,S_j$，$a_{jl}$是第$j$个特征可能取得第$l$个值。
 
 ## 学习与分类算法
 
-------
 
 **算法 朴素贝叶斯算法**
 
-------
 
 输入：训练数据$T$，待预测实例$x$
 
 输出：实例$x$的分类
 
-1. 计算先验概率以及条件概率$P(Y=c_k)$，$P(X^{(j)}=a_{jl}|Y=c_k)$
+1. 计算先验概率以及条件概率
+
+   $$P(Y=c_k)，P(X^{(j)}=a_{jl}\|Y=c_k)\nonumber$$
 
 2. 对于给定实例$x=(x^{(1)},x^{(2)},...,x^{(n)})^T$，计算
 
-   $P(Y=c_k)\prod_{j=1}^nP(X^{(j)}=x^{(j)}|Y=c_k),k=1,2,...,K$
+   $$P(Y=c_k)\prod_{j=1}^nP(X^{(j)}=x^{(j)}\|Y=c_k),k=1,2,...,K\nonumber$$
 
 3. 确定实例$x$的分类
 
-   $y=\mathop{\arg\max}_{c_k}P(Y=c_k)\prod_{j=1}^nP(X^{(j)}=x^{(j)}|Y=c_k)$
+   $$y=\mathop{\arg\max}_{c_k}P(Y=c_k)\prod_{j=1}^nP(X^{(j)}=x^{(j)}\|Y=c_k)\nonumber$$
 
-------
 
 ## 贝叶斯估计
 
