--- a/_posts/2020-03-14-朴素贝叶斯分类.md
+++ b/_posts/2020-03-14-朴素贝叶斯分类.md
@@ -93,15 +93,15 @@ $l=1,2,...,S_j$，$a_{jl}$是第$j$个特征可能取得第$l$个值。
 
 1. 计算先验概率以及条件概率
 
-   $$P(Y=c_k)，P(X^{(j)}=a_{jl}\|Y=c_k)\nonumber$$
+   $$P(Y=c_k)，P(X^{(j)}=a_{jl}|Y=c_k)\nonumber$$
 
 2. 对于给定实例$x=(x^{(1)},x^{(2)},...,x^{(n)})^T$，计算
 
-   $$P(Y=c_k)\prod_{j=1}^nP(X^{(j)}=x^{(j)}\|Y=c_k),k=1,2,...,K\nonumber$$
+   $$P(Y=c_k)\prod_{j=1}^nP(X^{(j)}=x^{(j)}|Y=c_k),k=1,2,...,K\nonumber$$
 
 3. 确定实例$x$的分类
 
-   $$y=\mathop{\arg\max}_{c_k}P(Y=c_k)\prod_{j=1}^nP(X^{(j)}=x^{(j)}\|Y=c_k)\nonumber$$
+   $$y=\mathop{\arg\max}_{c_k}P(Y=c_k)\prod_{j=1}^nP(X^{(j)}=x^{(j)}|Y=c_k)\nonumber$$
 
 
 ## 贝叶斯估计
