--- a/_posts/2020-03-14-朴素贝叶斯分类.md
+++ b/_posts/2020-03-14-朴素贝叶斯分类.md
@@ -3,7 +3,7 @@ title: 朴素贝叶斯分类
 tags: 统计学习方法
 ---
 
-> [贝叶斯公式参见](https://refantasy.cn/2020/03/04/随机事件与概率.html)
+> [贝叶斯公式](https://refantasy.cn/2020/03/04/随机事件与概率.html)
 > 
 > 本文内容和公式主要参考 李航《统计学习方法》
 
